Add historical LoL patch analytics filters (#36)
